--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ section {
     font-size: 11px;
     text-align: center;
     text-shadow: none;
+    font-family: 'El Messiri', sans-serif;
 }
 
 .form .remember {
